k8s/k8s-easychat/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: easy-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service # spring server에서 해당 이름으로 redis 호출
  namespace: easy-chat
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis # label 이름과 일치
